samples/_failures_safe/1761730422_2d9fea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2851841c.c: In function ‘main’:
./samples/SAFE/__tmp_2851841c.c:148:18: error: expected ‘;’ at end of input
  148 |     init_analyzer
      |                  ^
      |                  ;
./samples/SAFE/__tmp_2851841c.c:148:5: error: expected declaration or statement at end of input
  148 |     init_analyzer
      |     ^~~~~~~~~~~~~
